Use java 16